brat/test/golden/error/nameclash2.brat
type A(x) = x
type A(x,y) = y
